formatação em estilos dos formulários

--- a/src/main/resources/static/styles/candidature.css
+++ b/src/main/resources/static/styles/candidature.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f0f4f8;
+    background-color: var(--simple-ligth);
 }
 
 .application-container {
@@ -46,7 +46,7 @@
 }
 
 .btn-submit {
-    background-color: #007bff;
+    background-color: var(--primary-color-light);
     color: white;
     border: none;
     border-radius: 4px;
