--- a/src/main/resources/templates/companies/list.html
+++ b/src/main/resources/templates/companies/list.html
@@ -7,10 +7,10 @@
 
 </head>
 
-<body class="main-screen">
+<body>
 
     <header th:replace="~{/fragments/header}"> </header>
-    <main>
+    <main class="main-screen">
 
         <div class="card-list-component">
             <h1> Empresas Cadastradas</h1>
