--- a/src/main/resources/static/styles/company/form-company.css
+++ b/src/main/resources/static/styles/company/form-company.css
@@ -3,9 +3,9 @@ body {
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
-    display: flex;
+/*     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     height: 100vh;
 }
 
