--- a/src/main/resources/static/styles/fragments/card-global.css
+++ b/src/main/resources/static/styles/fragments/card-global.css
@@ -34,7 +34,7 @@
     padding: 10px;
     margin-top: 6px;
     border-radius: 25px;
-    color: black;
+    color: var(--neutral-color);
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 8px;
