--- a/src/main/resources/templates/offers/form.html
+++ b/src/main/resources/templates/offers/form.html
@@ -1,105 +1,117 @@
 <!DOCTYPE html>
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta th:insert="~{/fragments/custom-headfiles :: register-headfiles(title='Cadastrar Oferta de Estágio')}">
     <title>Cadastrar Oferta de Estágio</title>
 </head>
+
 <body>
-<header th:replace="~{/fragments/header}"></header>
-<main>
-    <div class="main-content">
-        <h1 class="form-title">Cadastrar Oferta de Estágio</h1>
+    <header th:replace="~{/fragments/header}"></header>
+    <main>
+        <div class="main-content">
+            <h1 class="form-title">Cadastrar Oferta de Estágio</h1>
 
-        <form th:action="@{/internshipOffer/save}" method="post" th:object="${internshipOffer}">
+            <form th:action="@{/internshipOffer/save}" method="post" th:object="${internshipOffer}">
 
-            <fieldset class="fieldset-info">
-                <legend class="fieldset-legend">Informações da Oferta</legend>
+                <fieldset class="fieldset-info">
+                    <legend class="fieldset-legend">Informações da Oferta</legend>
 
-                <div class="input-group">
-                    <label for="principalActivity" class="input-label">Principal Atividade *</label>
-                    <input type="text" id="principalActivity" class="input-form" placeholder="Descreva a principal atividade"
-                           th:field="*{principalActivity}" required maxlength="100"
-                           title="A principal atividade pode ter no máximo 100 caracteres.">
-                </div>
-
-                <div class="d-flex">
-                    <div class="input-group w-50">
-                        <label for="weeklyWorkload" class="input-label">Carga Horária Semanal *</label>
-                        <input type="number" id="weeklyWorkload" class="input-form" placeholder="Ex: 30"
-                               th:field="*{weeklyWorkload}" required min="1" max="40"
-                               title="A carga horária semanal deve estar entre 1 e 40 horas.">
+                    <div class="input-group">
+                        <label for="principalActivity" class="input-label">Principal Atividade *</label>
+                        <input type="text" id="principalActivity" class="input-form"
+                            placeholder="Descreva a principal atividade" th:field="*{principalActivity}" required
+                            maxlength="100" title="A principal atividade pode ter no máximo 100 caracteres.">
                     </div>
 
-                    <div class="input-group w-50 currency-prefix">
-                        <label for="remunerationValue" class="input-label">Valor da Bolsa *</label>
+                    <div class="d-flex">
+                        <div class="input-group w-50">
+                            <label for="weeklyWorkload" class="input-label">Carga Horária Semanal *</label>
+                            <input type="number" id="weeklyWorkload" class="input-form" placeholder="Ex: 30"
+                                th:field="*{weeklyWorkload}" required min="1" max="40"
+                                title="A carga horária semanal deve estar entre 1 e 40 horas.">
+                        </div>
+
+                        <div class="input-group w-50 currency-prefix">
+                            <label for="remunerationValue" class="input-label">Valor da Bolsa *</label>
+                            <span class="currency-label">R$</span>
+                            <input type="number" id="remunerationValue" class="input-form" placeholder="Ex: 1500,00"
+                                th:field="*{remunerationValue}" step="0.01" min="0"
+                                title="Por favor, insira um valor válido para a bolsa de estágio.">
+                        </div>
+                    </div>
+
+                    <div class="input-group currency-prefix">
+                        <label for="transportVoucher" class="input-label">Vale Transporte (opcional)</label>
                         <span class="currency-label">R$</span>
-                        <input type="number" id="remunerationValue" class="input-form" placeholder="Ex: 1500,00"
-                               th:field="*{remunerationValue}" step="0.01" min="0"
-                               title="Por favor, insira um valor válido para a bolsa de estágio.">
+                        <input type="number" id="transportVoucher" class="input-form" placeholder="Ex: 200,00"
+                            th:field="*{transportVoucher}" step="0.01" min="0"
+                            title="Por favor, insira um valor válido para o vale transporte.">
                     </div>
-                </div>
+                </fieldset>
 
-                <div class="input-group currency-prefix">
-                    <label for="transportVoucher" class="input-label">Vale Transporte (opcional)</label>
-                    <span class="currency-label">R$</span>
-                    <input type="number" id="transportVoucher" class="input-form" placeholder="Ex: 200,00"
-                           th:field="*{transportVoucher}" step="0.01" min="0"
-                           title="Por favor, insira um valor válido para o vale transporte.">
-                </div>
-            </fieldset>
+                <fieldset class="fieldset-info">
+                    <legend class="fieldset-legend">Empresa</legend>
+                    <div class="input-group">
+                        <input type="hidden" id="companyId" name="companyId" th:value="${company.id}"
+                            title="ID da empresa autenticada associada ao usuário logado.">
 
-            <fieldset class="fieldset-info">
-                <legend class="fieldset-legend">Empresa</legend>
-                <div class="input-group">
-                    <input type="hidden" id="companyId" name="companyId" th:value="${company.id}"
-                           title="ID da empresa autenticada associada ao usuário logado.">
-
-                    <input type="text" class="input-form" th:value="${company.fantasyName}" readonly
-                           title="Nome fantasia da empresa autenticada.">
-                </div>
-            </fieldset>
-
-            <fieldset class="fieldset-info">
-                <legend class="fieldset-legend">Pré-requisitos</legend>
-
-                <div class="input-group">
-                    <textarea id="prerequisites" class="input-form" placeholder="Máx. 500 caracteres"
-                              th:field="*{prerequisites}" maxlength="500"
-                              title="Os pré-requisitos podem ter no máximo 500 caracteres."></textarea>
-                </div>
-            </fieldset>
-
-            <fieldset class="fieldset-info">
-                <legend class="fieldset-legend">Competências</legend>
-
-                <div class="input-group">
-                    <label class="competence-label"><strong>Necessárias</strong></label>
-                    <div class="d-flex flex-wrap">
-                        <label th:each="competence : ${necessarySkills}" class="competence-checkbox">
-                            <input type="checkbox" th:field="*{necessarySkills}" th:value="${competence.id}" name="necessarySkills"/>
-                            <span th:text="${competence.getDescription()}"></span>
-                        </label>
+                        <input type="text" class="input-form" th:value="${company.fantasyName}" readonly
+                            title="Nome fantasia da empresa autenticada.">
                     </div>
-                    <div id="competenceError" style="color: red; display: none;">Por favor, selecione pelo menos uma competência necessária.</div>
-                </div>
+                </fieldset>
 
-                <div class="input-group">
-                    <label class="competence-label"><strong>Desejáveis</strong></label>
-                    <div class="d-flex flex-wrap">
-                        <label th:each="competence : ${desirableSkills}" class="competence-checkbox">
-                            <input type="checkbox" th:field="*{desirableSkills}" th:value="${competence.id}" name="desirableSkills"/>
-                            <span th:text="${competence.getDescription()}"></span>
-                        </label>
+                <fieldset class="fieldset-info">
+                    <legend class="fieldset-legend">Pré-requisitos</legend>
+
+                    <div class="input-group">
+                        <textarea id="prerequisites" class="input-form" placeholder="Máx. 500 caracteres"
+                            th:field="*{prerequisites}" maxlength="500"
+                            title="Os pré-requisitos podem ter no máximo 500 caracteres."></textarea>
                     </div>
-                </div>
-            </fieldset>
+                </fieldset>
 
-            <button class="submit-input" type="submit">Cadastrar Oferta</button>
-        </form>
-    </div>
+                <fieldset class="fieldset-info">
+                    <legend class="fieldset-legend">Competências</legend>
+                    <div class="input-group">
+                        <label class="competence-label"><strong>Necessárias</strong></label>
+                        <div class="d-flex flex-wrap justify-content-center align-items-center">
+                            
+                            <label th:each="competence : ${necessarySkills}" class="checkBox-box">
+                        
+                                <input type="checkbox" th:field="*{necessarySkills}" th:value="${competence.id}"
+                                    name="necessarySkills" />
+                                    <span class="checkmark"></span>
+                                    <span th:text="${competence.getDescription()}"></span>
+                                    
+                                </label>
+                                
+                        </div>
+                        <div id="competenceError" style="color: red; display: none;">Por favor, selecione pelo menos uma
+                            competência necessária.</div>
+                        </div>
+                        
+                        <div class="input-group">
+                            <label class="competence-label"><strong>Desejáveis</strong></label>
+                            <div class="d-flex flex-wrap justify-content-center align-items-center">
+                                
+                                <label th:each="competence : ${desirableSkills}" class="checkBox-box competence-checkbox ">
+                                    <input type="checkbox" th:field="*{desirableSkills}" th:value="${competence.id}"
+                                    name="desirableSkills" />
+                                    <span class="checkmark"></span>
+                                    <span th:text="${competence.getDescription()}"></span>
+                                </label>
+                            </div>
+                    </div>
+                </fieldset>
 
-    <div th:replace="~{/fragments/scripts}"></div>
-</main>
+                <button class="submit-input" type="submit">Cadastrar Oferta</button>
+            </form>
+        </div>
+
+        <div th:replace="~{/fragments/scripts}"></div>
+    </main>
 </body>
+
 </html>
