--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,17 +13,17 @@
                 </div>
                 <ul class="nav-list">
                     <li class="nav-item"
-                        th:if="${#authorization.expression('hasAnyRole(''ROLE_ADMIN'', ''ROLE_COORDINATOR'')')}">
+                        th:if="${#authorization.expression('hasAnyRole(''ROLE_ADMIN'', ''ROLE_COORDINATOR'',''ROLE_STUDENT'')')}">
                         <a class="nav-link" th:href="@{/student/students}">Alunos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/internshipOffer/offers}">Ofertas de Estágio</a>
                     </li>
                     <li class="nav-item"
-                        th:if="${#authorization.expression('hasAnyRole(''ROLE_ADMIN'', ''ROLE_COORDINATOR'')')}">
+                        th:if="${#authorization.expression('hasAnyRole(''ROLE_ADMIN'', ''ROLE_COORDINATOR'', ''ROLE_STUDENT',''ROLE_COMPANY'')')}">
                         <a class="nav-link" th:href="@{/company/companies}">Empresas</a>
                     </li>
-                    <li class="nav-item" th:if="${#authorization.expression('hasRole(''ROLE_COORDINATOR'')')}">
+                    <li class="nav-item" th:if="${#authorization.expression('hasAnyRole(''ROLE_COORDINATOR'', ''(''ROLE_ADMIN'''')')}">
                         <a class="nav-link" th:href="@{/candidature/candidatures}">Candidaturas</a>
                     </li>
 
