--- a/src/main/resources/templates/candidatures/info.html
+++ b/src/main/resources/templates/candidatures/info.html
@@ -29,7 +29,7 @@
 
         <section class="info-section" id="options-section">
             <h2 class="section-title">Opções</h2>
-            <th:block th:insert="~{/candidatures/fragments/actions(candidature=${candidature})}"></th:block>
+            <th:block th:insert="~{/candidatures/fragments/actions(candidature=${candidature}, showViewButton=false)}"></th:block>
         </section>
 
         <section class="info-section" id="message-section">
