--- a/src/main/resources/templates/system/error.html
+++ b/src/main/resources/templates/system/error.html
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="error-icon">⚠️</div>
-        <h1>Erro [[${statusCode}]] - Oops! Algo deu errado</h1>
+        <h1><!-- Erro [[${statusCode}]] --> Oops! Algo deu errado</h1>
         <p>Ocorreu um problema com sua solicitação.</p>
         <p><strong>Mensagem do erro:</strong></p>
         <p th:text="${errorMessage}">Aqui virá a mensagem de erro</p>
