--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,10 +20,11 @@
                         <a class="nav-link" th:href="@{/internshipOffer/offers}">Ofertas de Estágio</a>
                     </li>
                     <li class="nav-item"
-                        th:if="${#authorization.expression('hasAnyRole(''ROLE_ADMIN'', ''ROLE_COORDINATOR'', ''ROLE_STUDENT',''ROLE_COMPANY'')')}">
+                        th:if="${#authorization.expression('hasAnyRole(''ROLE_ADMIN'', ''ROLE_COORDINATOR'', ''ROLE_STUDENT'',''ROLE_COMPANY'')')}">
                         <a class="nav-link" th:href="@{/company/companies}">Empresas</a>
                     </li>
-                    <li class="nav-item" th:if="${#authorization.expression('hasAnyRole(''ROLE_COORDINATOR'', ''(''ROLE_ADMIN'''')')}">
+                    <li class="nav-item"
+                        th:if="${#authorization.expression('hasAnyRole(''ROLE_COORDINATOR'', ''ROLE_ADMIN'')')}">
                         <a class="nav-link" th:href="@{/candidature/candidatures}">Candidaturas</a>
                     </li>
 
@@ -61,6 +62,11 @@
                                         Perfil
                                     </a>
                                 </th:block>
+                                <a class="dropdown-header-item"
+                                th:if="${#authorization.expression('hasRole(''ROLE_COMPANY'')')}"    
+                                th:href="@{/internshipOffer/{username}/offers(username=${#authentication.principal.username})}">
+                                    Suas Ofertas
+                                </a>
                             </li>
 
                             <li>
