Aplicação de candidatura para estudante

--- a/src/main/resources/static/styles/candidature.css
+++ b/src/main/resources/static/styles/candidature.css
@@ -1,8 +1,11 @@
+header{
+    position: static;
+}
 .application-screen {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     background-color: var(--simple-ligth);
 }
 
@@ -11,7 +14,7 @@
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
+    max-width: 700px;
     width: 100%;
 }
 
@@ -19,6 +22,7 @@
     margin-bottom: 20px;
     color: #333333;
 }
+
 
 .form-group {
     margin-bottom: 15px;
