--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -101,7 +101,9 @@ button[type="submit"] {
     
 }
 
-
+.inform{
+    color :var(--deep-ocean);
+}
 .card-header{
     background: none;
     padding: 0;
