--- a/src/main/resources/templates/offers/info.html
+++ b/src/main/resources/templates/offers/info.html
@@ -14,7 +14,19 @@
     <header th:replace="~{/fragments/header}"></header>
 
     <!-- Conteúdo principal -->
-    <main class="main-content">
+    <main>
+        <!-- Seção de Título da Oportunidade -->
+        <section class="info-section" id="first-info">
+            <h1>
+                <img th:src="@{/imgs/default/internshipOffer-default.png}" alt="Imagem do Estudante">
+                [[${offer.principalActivity}]]
+            </h1>
+        </section>
+        <!-- Seção de Ações da oportunidade -->
+        <section class="info-section" id="options-section">
+            <h2 class="section-title">Opções</h2>
+            <th:block th:replace="~{/offers/fragments/actions(offer=${offer},showViewButton=false)}"></th:block>
+        </section>
         <!-- Seção de detalhes da oportunidade -->
         <div class="info-section details">
             <h1 class="section-title">Detalhes</h1>
